2006-10-23 Ian Rutt
 * Major enhancements to GLINT API, plu one or two bug
 corrections. Time-step coordination and averaging is now handled in a
 much-improved way.

2006-10-13 Ian Rutt
 * Corrected bug with initialisation of precip enhancement in EISMINT3-GL
 * Made romberg integration functions recursive. This corrects a serious
   bug in the annual PDD scheme
 * Corrected problem with annual PDD scheme whereby two edges of the PDD
   table weren't being initialised.
	
2006-10-10 Ian Rutt
 * Added precip enhancement to eismint3-greenland code

2006-09-28 Ian Rutt
 * Added append capability to output files. 

2006-09-27 Ian Rutt
 * Fixed minor bug in nc2config

2006-09-20 Ian Rutt
 * Added feature so that config file data is automatically added to output
 netcdf files as attribute.
 * Added utility nc2config that extracts this attribute and outputs it as
 plain text.

2006-09-15 Ian Rutt
 * Reorganisation and extension of restart-on-demand code
 * Added glimmer_restart_statscal.F90, which deals with static scalar
 variables.

2006-09-11 Ian Rutt
 * Slightly changed behaviour of depth-dependent calving. Now calves if
 depth <= specified level, rather than just less-than.
 * Fixed some bugs with water-budget accounting in glint.

2006-09-06 Ian Rutt
 * Began adding base code for restart-on-demand. This is
 glimmer_restart_common.F90, which provides a set of NetCDF routines for
 dumping arbitrary sequences of variables/arrays to file and retrieving
 them.

2006-08-25 Ian Rutt
 * Plumbed in new projection code. Tested successfully.
 * Retained capability to pase [GLINT projection] config section, but
 warning issued. This is a deprecated feature and should be removed at
 some point.
 * Fixed bug in glimmer_config.F90. Array-reading code now correctly
 parses arrays with varying sizes - a pointer array of the correct length
 is returned.

2006-08-22 Ian Rutt
 * Finished consolidated projection code. Tested against exisiting